add TU for organization resource