@@ -1,7 +1,6 @@
 package fr.lunatech.timekeeper.resources;
 
-import fr.lunatech.timekeeper.services.dtos.OrganizationRequest;
-import fr.lunatech.timekeeper.services.dtos.OrganizationResponse;
+import fr.lunatech.timekeeper.services.dtos.*;
 import io.quarkus.test.common.QuarkusTestResource;
 import io.quarkus.test.h2.H2DatabaseTestResource;
 import io.quarkus.test.junit.QuarkusTest;
@@ -11,11 +10,14 @@ import org.junit.jupiter.api.Tag;
 import org.junit.jupiter.api.Test;
 
 import javax.inject.Inject;
+import java.util.Collections;
 import java.util.List;
 
+import static fr.lunatech.timekeeper.models.Profile.Admin;
 import static fr.lunatech.timekeeper.resources.KeycloakTestResource.getAdminAccessToken;
-import static fr.lunatech.timekeeper.resources.TestUtils.toJson;
+import static fr.lunatech.timekeeper.resources.TestUtils.*;
 import static io.restassured.RestAssured.given;
+import static java.util.Collections.emptyList;
 import static javax.ws.rs.core.HttpHeaders.ACCEPT;
 import static javax.ws.rs.core.HttpHeaders.LOCATION;
 import static javax.ws.rs.core.MediaType.APPLICATION_JSON;
@@ -54,7 +56,7 @@ public class OrganizationResourceTest {
                 .statusCode(CREATED.getStatusCode())
                 .header(LOCATION, endsWith("/api/organizations/1"));
 
-        final OrganizationResponse expectedorganizationResponse = new OrganizationResponse(1L, "France", "organization.org", List.of(), List.of());
+        final OrganizationResponse expectedorganizationResponse = new OrganizationResponse(1L, "France", "organization.org", Collections.emptyList(), Collections.emptyList());
         given()
                 .auth().preemptive().oauth2(token)
                 .when()
@@ -63,6 +65,129 @@ public class OrganizationResourceTest {
                 .then()
                 .statusCode(OK.getStatusCode())
                 .body(is(toJson(expectedorganizationResponse)));
+    }
+
+    @Test
+    void shouldCreateUsersOnOneOrganizationWhenAdminProfile() {
+
+        final String token = getAdminAccessToken();
+        final OrganizationRequest organization = new OrganizationRequest("France", "organization.org");
+        given()
+                .auth().preemptive().oauth2(token)
+                .when()
+                .contentType(APPLICATION_JSON)
+                .body(organization)
+                .post("/api/organizations")
+                .then()
+                .statusCode(CREATED.getStatusCode())
+                .header(LOCATION, endsWith("/api/organizations/1"));
+
+        final UserRequest user = createUserRequest("Sam", "Huel", "sam@gmail.com", "sam.png", Admin);
+        given()
+                .auth().preemptive().oauth2(token)
+                .when()
+                .contentType(APPLICATION_JSON)
+                .body(user)
+                .post("/api/users")
+                .then()
+                .statusCode(CREATED.getStatusCode())
+                .header(LOCATION, endsWith("/api/users/2"));
+
+        final UserRequest user2 = createUserRequest("Sam2", "Huel2", "sam2@gmail.com", "sam.png", Admin);
+        given()
+                .auth().preemptive().oauth2(token)
+                .when()
+                .contentType(APPLICATION_JSON)
+                .body(user2)
+                .post("/api/users")
+                .then()
+                .statusCode(CREATED.getStatusCode())
+                .header(LOCATION, endsWith("/api/users/3"));
+
+
+
+        final OrganizationResponse expectedorganizationResponse = new OrganizationResponse(1L, "France", "organization.org", Collections.emptyList(), List.of(2L, 3L)) ;
+        given()
+                .auth().preemptive().oauth2(token)
+                .when()
+                .header(ACCEPT, APPLICATION_JSON)
+                .get("/api/organizations/1")
+                .then()
+                .statusCode(OK.getStatusCode())
+                .body(is(toJson(expectedorganizationResponse)));
+    }
+
+    @Test
+    void shouldCreateProjectsOnOneOrganizationWhenAdminProfile() {
+
+        final String token = getAdminAccessToken();
+
+        final OrganizationRequest organization = new OrganizationRequest("France", "organization.org");
+        given()
+                .auth().preemptive().oauth2(token)
+                .when()
+                .contentType(APPLICATION_JSON)
+                .body(organization)
+                .post("/api/organizations")
+                .then()
+                .statusCode(CREATED.getStatusCode())
+                .header(LOCATION, endsWith("/api/organizations/1"));
+
+        final ClientRequest client = new ClientRequest("NewClient", "NewDescription");
+        given()
+                .auth().preemptive().oauth2(token)
+                .when()
+                .contentType(APPLICATION_JSON)
+                .body(client)
+                .post("/api/clients")
+                .then()
+                .statusCode(CREATED.getStatusCode())
+                .header(LOCATION, endsWith("/api/clients/2"));
+
+        final ClientRequest client2 = new ClientRequest("NewClient", "NewDescription");
+        given()
+                .auth().preemptive().oauth2(token)
+                .when()
+                .contentType(APPLICATION_JSON)
+                .body(client)
+                .post("/api/clients")
+                .then()
+                .statusCode(CREATED.getStatusCode())
+                .header(LOCATION, endsWith("/api/clients/3"));
+
+        final ProjectRequest project = new ProjectRequest("Pepito", true, "New project", 2L, 1L, false);
+        given()
+                .auth().preemptive().oauth2(token)
+                .when()
+                .contentType(APPLICATION_JSON)
+                .body(project)
+                .post("/api/projects")
+                .then()
+                .statusCode(CREATED.getStatusCode())
+                .header(LOCATION, endsWith("/api/projects/4"));
+
+        final ProjectRequest project2 = new ProjectRequest("Pepito2", true, "New project2", 3L, 1L, false);
+        given()
+                .auth().preemptive().oauth2(token)
+                .when()
+                .contentType(APPLICATION_JSON)
+                .body(project)
+                .post("/api/projects")
+                .then()
+                .statusCode(CREATED.getStatusCode())
+                .header(LOCATION, endsWith("/api/projects/5"));
+
+        final OrganizationResponse expectedorganizationResponse = new OrganizationResponse(1L, "France", "organization.org", List.of(4L, 5L), Collections.emptyList());
+        given()
+                .auth().preemptive().oauth2(token)
+                .when()
+                .header(ACCEPT, APPLICATION_JSON)
+                .get("/api/organizations/1")
+                .then()
+                .statusCode(OK.getStatusCode())
+                .body(is(toJson(expectedorganizationResponse)));
+
+
     }
 }
 
